# esp-web-server

./: .gitignore  CMakeLists.txt  settings.mk
app/driver/: uart.c
app/include/: user_config.h
app/include/driver/: uart.h  uart_register.h
app/user/: ap_config.c  ap_config.h  ap_connect.c  ap_connect.h  httpd.c  httpd.h  user_main.c  util.h
pages/: gen_pages.sh  index.html  page.html
